<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/book"
            android:title="@string/menu_books" />
        <item
            android:id="@+id/nav_reserved"
            android:icon="@drawable/booking"
            android:title="@string/menu_reserved" />
        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_search_category_default"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/userprofile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/aboutus"
            android:title="@string/menu_about" />

    </group>

</menu>
